15-ingress/ingress.yaml
# https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/
# https://kubernetes.io/docs/concepts/services-networking/ingress/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-x
  namespace: project-x
spec:
  rules:
    - host: project-x.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-x
                port:
                  number: 80
